Fix 2sxc template & styles for Sessions - loop through days and times, add headers for breakfast, lunch, etc, add styles to make line breaks in description visible

--- a/Portals/_default/Skins/DNNSummit/css/content.css
+++ b/Portals/_default/Skins/DNNSummit/css/content.css
@@ -1077,6 +1077,7 @@
 	font-weight: 300;
 	line-height: 27px;
 	margin-bottom: 26px;
+	white-space: pre-wrap;
 }
 .session__description ol,
 .session__description ul { margin-bottom: 26px; }
